app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: snow-deployment
  annotations:
    kubernetes.io/change-cause: "Update to 2.1"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: snow
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: snow
    spec:
      containers:
        - name: snowflake
          image: vadimsavchuk/my-repo:snowflake-2.1 # локальный snowflake:1.0 не работает с кластером kind нужен удаленный образ
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: "500m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "500Mi"
          livenessProbe:
            httpGet:
              path: "/management/health/liveness"
              port: 8080
            initialDelaySeconds: 15
            timeoutSeconds: 2
            periodSeconds: 20
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: "/management/health/readiness"
              port: 8080
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 5
            failureThreshold: 3
            successThreshold: 1
